<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/start"
        android:title="@string/start">

    </item>
    <item
        android:id="@+id/play"
        android:title="@string/play">

    </item>
    <item
        android:id="@+id/playWell"
        android:title="@string/playWell">

    </item>

    <item
        android:id="@+id/stop"
        android:title="@string/stop">

    </item>

    <item
        android:id="@+id/help"
        android:title="@string/help">

    </item>

    <item
        android:id="@+id/nothelp"
        android:title="@string/nothelp">

    </item>
    <item
        android:id="@+id/someId"
        android:title="someItem" />

</menu>